updated Authors & readme.md

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
 ~ AUTHORS:
-- Yahaya Muhammad Yusuf
-- Abdessadek EL Aasri
+- NAME: Yahaya Muhammad Yusuf
+- Email: feezynharmony@gmail.com
+- NAME: Abdessadek EL Aasri
+- EMAIL: 
+
