--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,4 @@
 - NAME: Yahaya Muhammad Yusuf
 - Email: feezynharmony@gmail.com
 - NAME: Abdessadek EL Aasri
-- EMAIL: 
-
+- EMAIL: elaasriya2003@gmail.com
